fixed skill section layout bug

--- a/styles.css
+++ b/styles.css
@@ -413,7 +413,8 @@ body.dark-mode #top li a:hover {
     grid-template-columns: repeat(auto-fit, 60px);
     justify-items: center;
     gap: 10px;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
     background-color: rgb(110, 150, 150);
     border-radius: 30px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
